--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,4 +6,32 @@
   margin: 0;
   padding: 0;
 }
+
+.container__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.container__col {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+}
+
+@media (min-width: 768px) {
+  .container__col {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+  }
+}
+
+.container__client {
+  margin-bottom: 1em;
+  padding: 1em;
+  background-color: #f1f1f1;
+}
 /*# sourceMappingURL=style.css.map */
