--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,4 +34,8 @@
   padding: 1em;
   background-color: #f1f1f1;
 }
+
+.container__client-data {
+  list-style-type: none;
+}
 /*# sourceMappingURL=style.css.map */
