--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,23 +10,24 @@ $color-one: #f1f1f1;
 }
 
 .container {
+	&__row {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	&__col {
+		flex: 0 0 100%;
 
-  &__row {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  &__col {
-    flex: 0 0 100%;
-  
-    @media (min-width: 768px) {
-      flex: 0 0 50%;
-    }
-  }
+		@media (min-width: 768px) {
+			flex: 0 0 50%;
+		}
+	}
 
-  &__client {
-    margin-bottom: 1em;
-    padding: 1em;
-    background-color: $color-one;
-  }
+	&__client {
+		margin-bottom: 1em;
+		padding: 1em;
+		background-color: $color-one;
+	}
+	&__client-data {
+		list-style-type: none;
+	}
 }
-
