--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -86,12 +86,25 @@ $transition: all 1s;
 }
 
 .list {
+	width: 100%;
 	&__row {
 		&:nth-of-type(even) {
 			background-color: $color-one;
 		}
 	}
+	&__heading {
+		font-size: 0.8em;
+
+		@media (min-width: 768px) {
+			font-size: 1em;
+		}
+	}
 	&__cell {
 		padding: 0.5em 0 0.5em 0;
+		font-size: 0.8em;
+
+		@media (min-width: 768px) {
+			font-size: 1em;
+		}
 	}
 }
