--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@
   -webkit-box-flex: 0;
       -ms-flex: 0 0 100%;
           flex: 0 0 100%;
+  overflow-x: scroll;
 }
 
 @media (min-width: 768px) {
@@ -73,6 +74,10 @@
 .sort__btn--active {
   background-position: 0 100%;
   color: #fff !important;
+}
+
+.sort__btn--up-down::after {
+  content: '\2193 \2191';
 }
 
 .sort__btn--down::after {
