--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -70,19 +70,19 @@ $transition: all 1s;
 
 		&--up-down {
 			&::after {
-				content: '\2193 \2191';
+				content: '\00A0\2193\2191';
 			}
 		}
 
 		&--down {
 			&::after {
-				content: '\2193';
+				content: '\00A0\2193';
 			}
 		}
 
 		&--up {
 			&::after {
-				content: '\2191';
+				content: '\00A0\2191';
 			}
 		}
 
